--- a/BoilerplateDemo/package.json
+++ b/BoilerplateDemo/package.json
@@ -5,6 +5,7 @@
   "private": true,
   "dependencies": {
     "axios": "^0.18.0",
+    "lodash": "^4.17.10",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-notification-system": "^0.2.17",
